Fix AlbumBox not showing urls

--- a/styles/AlbumBoxes.module.scss
+++ b/styles/AlbumBoxes.module.scss
@@ -1,6 +1,11 @@
 @import "Variables.scss";
 
 .albumBox {
+    a {
+        color: white;
+        text-decoration: none;
+    }
+
     border-radius: 15px;
     background-color: rgba(17,17,17,.7);
     opacity: 1;
@@ -28,8 +33,11 @@
 
 .albumBox:hover {
     background-color: rgba(50, 50, 50, 0.7);
-    color: $link-color;
-    text-decoration: underline;
+
+    a {
+       color: $link-color;
+        text-decoration: underline;
+    }
 
     .img { transform: scale(1) }
 }
